<resources>
    <string name="app_name">Space Travel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="sign_up_with_email">Sign Up With Email</string>
    <string name="select_planet">Select Planet</string>
    <string name="btn_cancel">Planets</string>
    <string name="timetable_title">Timetable</string>
    <string name="btn_arrivals">Arrivals</string>
    <string name="btn_departures">Departures</string>
</resources>
