<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.spacetravel.TimetableFragment"
    android:background="@drawable/background"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#80000000"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:textColor="#FFFFFF"
            android:background="@drawable/edittext_border"
            android:textSize="14dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timetable_title"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"
            android:textColor="#FFFFFF"
            android:textSize="24dp"/>

    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <Button
            android:id="@+id/btn_arrivals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_arrivals"
            android:layout_weight="0.5"
            android:background="#FF103A59"/>

        <Button
            android:id="@+id/btn_departures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_departures"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:background="#70D1D1D5"/>



    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_timetable_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="0dp"
        android:paddingBottom="5dp"
        android:scrollbars="vertical"
        android:scrollbarSize="10dp">
    </android.support.v7.widget.RecyclerView>


</LinearLayout>
