<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/login_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/title_logo"
        android:layout_centerInParent="true"/>

    <EditText
        android:id="@+id/login_email"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:alpha="0"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/login_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:alpha="0"
        android:layout_below="@+id/login_email"/>

    <ImageView
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button_login"
        android:layout_below="@id/login_password"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true"
        android:alpha="0"/>

    <Button
        android:id="@+id/login_register"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_border"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:alpha="0"
        android:text="@string/sign_up_with_email"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
